# context-generator-hook

./: .gitignore  README.md  pyproject.toml
.context/: CONTEXT.md  config.json
src/context_hook/: __init__.py  cli.py  config.py  gemini.py  generator.py  git.py  llm.py  lockfile.py  logger.py  openai.py  updater.py
src/context_hook/prompts/: chunk_summary.txt  full_generation.txt  incremental_update.txt  merge_summaries.txt
tests/: test_generator.py  test_git.py  test_lockfile.py  test_updater.py
