[project]
name = "context-generator-hook"
version = "0.1.0"
description = "Git post-commit hook that maintains a living project context file using Gemini AI"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "click>=8.0",
    "gitpython>=3.1",
]

[project.scripts]
ctxgen = "context_hook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_hook"]

[dependency-groups]
dev = ["pytest>=8.0"]
